# tauri-window-test

./: .gitignore  README.md  package.json  tsconfig.json
src/: app.html  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/lib/: colorPickerNode.svelte  flow.svelte  node_server.svelte  node_user.svelte  table.svelte
src/lib/node_server_components/: resource_line.svelte
src/routes/: +page.svelte
